Transfer Mode operator tries and fails on linked objects #115171

Closed
opened 2023-11-20 12:01:25 +01:00 by Julien Kaspar · 1 comment
Member

System Information
Operating system: Linux-6.6.1-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 16.0.6, DRM 3.54, 6.6.1-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-rc4

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-19 23:36, hash: 41f9f2753a70
Worked: (newest version of Blender that worked as expected)

Short description of error
When using Alt Q to instantly switch to another object while preserving the current mode, it might happen that it picks an object in the viewport that is linked.

In that case the operator will try to run anyway and fails with a popup.

image

The undesirable outcome in this is that the operator exited the mode on the active object and now is left in object mode with the linked object selected.
A far better outcome would be that its reverted back to the previous state (mode, active object and selected objects).

Exact steps for others to reproduce the error

  • Link in any object from another file
  • Enter edit or sculpt mode on a local object
  • Point with the cursor on the linked object and press Alt Q
**System Information** Operating system: Linux-6.6.1-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 16.0.6, DRM 3.54, 6.6.1-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-rc4 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-19 23:36, hash: `41f9f2753a70` Worked: (newest version of Blender that worked as expected) **Short description of error** When using `Alt Q` to instantly switch to another object while preserving the current mode, it might happen that it picks an object in the viewport that is linked. In that case the operator will try to run anyway and fails with a popup. ![image](/attachments/92ad6ddc-8659-494a-aba3-0ac16f0ecb96) The undesirable outcome in this is that the operator exited the mode on the active object and now is left in object mode with the linked object selected. A far better outcome would be that its reverted back to the previous state (mode, active object and selected objects). **Exact steps for others to reproduce the error** - Link in any object from another file - Enter edit or sculpt mode on a local object - Point with the cursor on the linked object and press `Alt Q`
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-20 12:01:26 +01:00
Member

A far better outcome would be that its reverted back to the previous state (mode, active object and selected objects).

I can confirm. In that case, we can return early the operator's code if ID_IS_LINKED is true

> A far better outcome would be that its reverted back to the previous state (mode, active object and selected objects). I can confirm. In that case, we can return early the operator's code if `ID_IS_LINKED` is true
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-20 12:51:55 +01:00
Pratik Borhade self-assigned this 2023-11-21 11:53:43 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-22 14:55:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115171
No description provided.