Fix #115171: Transfer Mode operator tries and fails on linked objects

Skip operator execution if destination id is linked or overridden.

Pull Request: https://projects.blender.org/blender/blender/pulls/115266